# stablecoin-sc

./: README.md
liquidity_pool/: Cargo.toml  README.md
liquidity_pool/denali/: borrow-ok.scen.json  init.scen.json  liquidate-ok.scen.json  lock-debt-tokens-ok.scen.json  repay-ok.scen.json
liquidity_pool/snippets/: devnet.snippet.sh  local.snippet.sh
liquidity_pool/src/: debt_token.rs  lib.rs  models.rs  stablecoin_token.rs
liquidity_pool/wasm/: Cargo.toml
liquidity_pool/wasm/src/: lib.rs
lock-rewards/: Cargo.toml
lock-rewards/src/: lib.rs  user_deposit.rs
lock-rewards/wasm/: Cargo.toml
lock-rewards/wasm/src/: lib.rs
stablecoin-v2/: Cargo.toml
stablecoin-v2/abi/: Cargo.toml
stablecoin-v2/abi/src/: main.rs
stablecoin-v2/src/: lib.rs
stablecoin-v2/src/actors/: hedging_agents.rs  keepers.rs  liquidity_providers.rs  stable_seekers.rs
stablecoin-v2/src/economics/: fees.rs  math.rs  pools.rs
stablecoin-v2/src/tokens/: hedging_token.rs  liquidity_token.rs  stablecoin_token.rs  token_common.rs
stablecoin-v2/tests/: denali_go_test.rs
stablecoin-v2/wasm/: Cargo.toml
stablecoin-v2/wasm/src/: lib.rs
