[package]
name = "lock-rewards-wasm"
version = "0.0.1"
authors = ["Sumanth <saisumanthvadla@gmail.com>"]
edition = "2024"
publish = false

[lib]
crate-type = [ "cdylib",]

[workspace]
members = [ ".",]

[dev-dependencies]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.lock-rewards]
features = [ "wasm-output-mode",]
default-features = false
path = ".."

[dependencies.numbat-wasm-output]
version = "0.17.2"
features = ["wasm-output-mode", "panic-message"]
