[package]
name = "stablecoin-v2-wasm"
version = "0.0.0"
authors = [ "Sumanth <saisumanthvadla@gmail.com>" ]
edition = "2024"
publish = false

[lib]
crate-type = [ "cdylib",]

[workspace]
members = [ ".",]

[dev-dependencies]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.stablecoin-v2]
features = [ "wasm-output-mode",]
default-features = false
path = ".."

[dependencies.numbat-wasm-output]
version = "0.20.1"
features = [ "wasm-output-mode",]
